# chrome-tester

./: .gitignore  doc.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  test_integration.md
scripts/: browser-manager.js  check-installation.js  download-browser.js  list-versions.js  uninstall-browser.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: error.rs  launch_params.rs  mod.rs
src-tauri/src/services/: browser_manager.rs  download_manager.rs  mod.rs  nodejs_runtime.rs  parameter_manager.rs  retry_manager.rs
src-tauri/src/utils/: file_utils.rs  mod.rs  platform_utils.rs
src/components/browser/: BrowserCard.tsx  BrowserList.tsx  index.ts
src/components/download/: DownloadManager.tsx  DownloadProgress.tsx  index.ts
src/components/layout/: Header.tsx  Layout.tsx  MainContent.tsx  index.ts
src/components/modals/: BrowserDetailsModal.tsx  DownloadModal.tsx  SettingsModal.tsx  index.ts
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Notification.tsx  ProgressBar.tsx  index.ts
src/hooks/: index.ts  useAppInit.ts  useDownloadEvents.ts
src/stores/: index.ts  useAppStore.ts  useBrowserStore.ts  useDownloadStore.ts  useUIStore.ts
src/types/: index.ts
